recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
avance(length)
droite(angle)
tree(steps-1,length,angle,shrink)
gauche(2*angle)
tree(steps-1,length,angle,shrink)
recule(lenght)
}
